[gd_scene format=3 uid="uid://c8k5n7wt2mnop"]

[ext_resource type="Script" path="res://scripts/networked_game.gd" id="1_networked_game"]

[node name="NetworkedGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_networked_game")

[node name="PlayButton" type="Button" parent="."]
layout_mode = 0
text = "Play"

[node name="PassButton" type="Button" parent="."]
layout_mode = 0
text = "Pass"

[node name="StatusLabel" type="Label" parent="."]
layout_mode = 0
text = "Connecting..."
